# Hongyuan-Qi

HW11/: from PIL import Image.py
HW12/: CMakeLists.txt  HW12.c
HW14/: Problem1.py  Problem2.py  Problem3.py
HW16/: CMakeLists.txt  HW16.c
HW2/: CMakeLists.txt  blink.c
HW3/: CMakeLists.txt  print.c
HW4/: CMakeLists.txt
HW5/: CMakeLists.txt  DAC.c  HW5.c
HW6/: CMakeLists.txt  HW6.c
HW7/: CMakeLists.txt  HW7.c  ssd1306.c
HW9/: CMakeLists.txt  HW9.c
